= HEAD

  * Added timeout middleware to set a limit on the amount of time a server may
    respond to a request. Also added timeout environment variable.

= 0.12.5 / 2012-04-16

  * Use "delete" instead of "del" for router methods. Although "delete" is
    indeed a reserved word in JavaScript, that fact applies only to identifiers
    and not identifier names (see https://developer.mozilla.org/en/JavaScript/Reference/Reserved_Words).
  * Added support for the `callback` HTTP parameter in JSONP middleware. This
    value takes precedence over any pre-configured callback name that is given
    when the middleware is instantiated.

= 0.12.4 / 2012-03-30

  * Fixed a bug where the request would not return properly when using the
    directory middleware and the directory is not found.

= 0.12.3 / 2012-03-23

  * Ignore broken symlinks when displaying a directory listing using
    strata.directory.

  * Fix memory leak when using the default app in strata.run.

= 0.12.2 / 2012-03-06

  * Added a missing comma.

= 0.12.1 / 2012-03-06

  * Added -d option to the strata executable. This allows you to easily serve
    the contents of a given directory over HTTP(S).

= 0.12.0 / 2012-03-03

  * Removed the Builder, Mapper, and Router constructors in favor of similar
    (but not identical) build, map, and route middlewares.

  * Added the ability for users to call any of the build/map/route methods
    directly on the strata module itself. Doing so generates a "default" app
    that may be run by calling `strata.run` with no other arguments.

  * Added all routing methods to the build middleware to enable easier app
    creation. The caveat is that calls to the routing methods are not
    interleaved with calls to use & map. Instead, they are simply forwarded to
    a downstream route middleware which is set as the default app of the build.

= 0.11.0 / 2012-01-19

  * Removed dependency on gzbz2. strata.gzip requires node >= 0.6.

= 0.10.1 / 2012-01-03
