@@ -12,8 +12,11 @@ var util = require("util"),
  */
 exports.version = [0, 12, 5];
 
+exports.runFile = runFile;
 exports.run = run;
 exports.createServer = createServer;
+exports.startServer = startServer;
+exports.bind = bind;
 exports.env = makeEnv;
 exports.call = call;
 exports.handleError = handleError;
@@ -45,19 +48,24 @@ exports.__defineGetter__("app", function () {
     return _defaultApp;
 });
 
+var fork = require("child_process").fork;
+var childPath = require("path").join(__dirname, "child.js");
+
 /**
- * Creates and starts a server for the given `app` using `opts`. Registers the
- * given `callback` on the "listening" event of the server that is created. The
- * `opts` object may contain any properties used to create the server (see
- * `createServer`) and the following:
- *
- *   - host     The host name to accept connections on (defaults to INADDR_ANY)
- *   - port     The port to listen on (defaults to 1982)
- *   - socket   Unix socket file to listen on (trumps host/port)
- *
- * Returns the newly created server.
+ * Creates and starts a server for the app in the given `appFile`. If an `opts`
+ * object is given it may contain any properties used to create and start the
+ * server (see `createServer` and `startServer`).
  */
-function run(app, opts, callback) {
+function runFile(appFile, opts, listeningListener) {
+    return run(require(appFile), opts, listeningListener);
+}
+
+/**
+ * Creates and starts a server for the given `app`. If an `opts` object is
+ * given it may contain any properties used to create and start the server
+ * (see `createServer` and `startServer`).
+ */
+function run(app, opts, listeningListener) {
     if (typeof app === "function") {
         // If the user supplies an app here and we already have a _defaultApp
         // configured, then delegate to the _defaultApp.
@@ -66,22 +74,86 @@ function run(app, opts, callback) {
             app = _defaultApp;
         }
     } else {
-        callback = opts;
+        listeningListener = opts;
         opts = app;
-        app = defaultApp(); // Otherwise run the `defaultApp`.
+        app = defaultApp(); // Run the _defaultApp.
     }
 
     if (typeof opts === "function") {
-        callback = opts;
+        listeningListener = opts;
         opts = null;
     }
 
     opts = opts || {};
 
-    var server = createServer(app, opts);
+    var server = createServer(opts);
+    bind(app, server);
+    startServer(server, opts, listeningListener);
 
-    if (typeof callback === "function") {
-        server.on("listening", callback);
+    return server;
+}
+
+/**
+ * Creates an HTTP server. If an `opts` object is given, it may contain any of
+ * the following properties:
+ *
+ *   - key      Private key to use for SSL (HTTPS only)
+ *   - cert     Public X509 certificate to use (HTTPS only)
+ *
+ * If given, the `requestListener` callback is bound to the "request" event
+ * of the server.
+ */
+function createServer(opts, requestListener) {
+    opts = opts || {};
+
+    var server;
+    if (opts.key && opts.cert) {
+        server = https.createServer({key: opts.key, cert: opts.cert});
+    } else {
+        server = http.createServer();
+    }
+
+    if (typeof requestListener === "function") {
+        server.on("request", requestListener);
+    }
+
+    return server;
+}
+
+/**
+ * Starts the given `server`. The given `opts` object may contain any of the
+ * following properties:
+ *
+ *   - host     The host name to accept connections on (defaults to INADDR_ANY)
+ *   - port     The port to listen on (defaults to 1982)
+ *   - socket   Unix socket file to listen on (trumps host/port)
+ *   - quiet    Set `true` to prevent the server from writing a startup message
+ *              to the console after it starts
+ *
+ * If given, the `listeningListener` callback is bound to the "listening" event
+ * of the server.
+ */
+function startServer(server, opts, listeningListener) {
+    if (!opts.quiet) {
+        server.on("listening", function () {
+            var addr = server.address();
+
+            var msg = ">> Strata web server version " + exports.version.join(".");
+            msg += " running on node " + process.versions.node + "\n";
+            msg += ">> Listening on " + addr.address;
+
+            if (addr.port) {
+                msg += ":" + addr.port;
+            }
+
+            msg += ", CTRL+C to stop";
+
+            console.log(msg);
+        });
+    }
+
+    if (typeof listeningListener === "function") {
+        server.on("listening", listeningListener);
     }
 
     if (opts.socket) {
@@ -89,61 +161,29 @@ function run(app, opts, callback) {
     } else {
         server.listen(opts.port || 1982, opts.host);
     }
-
-    return server;
 }
 
 /**
- * Creates an HTTP server for the given `app`. If `opts` are supplied, they are
- * used as the options for an HTTPS server. It may contain the following
- * properties:
- *
- *   - key      Private key to use for SSL (HTTPS only)
- *   - cert     Public X509 certificate to use (HTTPS only)
- *   - name     The name of the server (defaults to $SERVER_NAME)
- *   - quiet    Set true to prevent the server from writing a startup message
- *              to the console after it starts
- *
- * The `app` should be a valid Strata app (see the SPEC).
+ * Binds the given `app` to be called whenever the given `server` receives a
+ * new request. The `app` must be a valid strata application (see the SPEC).
  */
-function createServer(app, opts) {
+function bind(app, server) {
     if (typeof app !== "function") {
         throw new StrataError("App must be a function");
     }
 
-    opts = opts || {};
-
-    var server, protocol;
-    if (opts.key && opts.cert) {
-        server = https.createServer({key: opts.key, cert: opts.cert});
+    var protocol;
+    if (server instanceof https.Server) {
         protocol = "https:";
     } else {
-        server = http.createServer();
         protocol = "http:";
     }
 
     var serverName, serverPort;
     server.on("listening", function () {
         var addr = server.address();
-
-        serverName = opts.name || process.env.SERVER_NAME || addr.address;
+        serverName = process.env.SERVER_NAME || addr.address;
         serverPort = (addr.port || "").toString();
-
-        if (opts.quiet) {
-            return;
-        }
-
-        var msg = ">> Strata web server version " + exports.version.join(".");
-        msg += " running on node " + process.versions.node + "\n";
-        msg += ">> Listening on " + addr.address;
-
-        if (addr.port) {
-            msg += ":" + addr.port;
-        }
-
-        msg += ", CTRL+C to stop";
-
-        console.log(msg);
     });
 
     server.on("request", function (req, res) {
@@ -183,8 +223,6 @@ function createServer(app, opts) {
             }
         });
     });
-
-    return server;
 }
 
 /**
